Remove/change deplicated methods: Object#finalize(), Class#newInstance()